--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build . --file Dockerfile.txt --tag my-image-name:$(date +%s)
       
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/docker_repo:2.0
+      run: docker push ${{secrets.DOCKER_USER}}/dockerdemo:1.0
