--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build . --file Dockerfile.txt --tag myfirstimage:$(date +%s)
       
     - name: Docker Push
-      run: docker push https://hub.docker.com/repository/docker/chinmayapte01/docker_repo/myfirstimage:2.0
+      run: docker push ${{secrets.DOCKER_USER}}/docker_repo/myfirstimage:2.0
