--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.txt --tag myfirstimage:$(date +%s)
+      run: docker build -t myfirstimage:2.0 . -f Dockerfile.txt
       
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/myfirstimage:2.0
+      run: docker push ${{secrets.DOCKER_USER}}/docker_repo/myfirstimage:2.0
