--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build -t myfirstimage:1.0 . -f Dockerfile.txt
       
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/docker_repo/myfirstimage:1.0
+      run: docker push ${{secrets.DOCKER_USER}}/docker_repo:1.0
