--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -23,6 +23,8 @@ jobs:
     - name: Build the Docker image
       run: docker build -t myfirstimage:1.0 . -f Dockerfile.txt
       
-    - name: Docker Push
+    - name: Docker Tag
       run: docker tag myfirstimage:1.0 imageone:stable
+      
+    - name: Docker Push
       run: docker push ${{secrets.DOCKER_USER}}/docker_repo/myfirstimage:1.0
