--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -21,10 +21,10 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build -t chinmayapte01/myfirstimage . -f Dockerfile.txt
+      run: docker build . --file Dockerfile.txt --tag imageone:2.0
       
    #- name: Docker Tag
    #   run: docker tag myfirstimage:1.0 imageone:stable
       
     - name: Docker Push
-      run: docker push hub.docker.com/repository/docker/chinmayapte01/myfirstimage:1.0
+      run: docker push chinmayapte01/myfirstimage:2.0
