--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile.txt --tag chinmayapte01/myfirstimage:2.0
       
-   #- name: Docker Tag
-   #   run: docker tag myfirstimage:1.0 imageone:stable
+    - name: Docker Tag
+      run: docker tag myfirstimage:2.0 myfirstimage:latest
       
     - name: Docker Push
       run: docker push chinmayapte01/myfirstimage:2.0
