--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,7 +24,7 @@ jobs:
       run: docker build . --file Dockerfile.txt --tag chinmayapte01/myfirstimage:2.0
       
     - name: Docker Tag
-      run: docker tag chinmayapte01/myfirstimage:2.0 chinmayapte01/myfirstimage:latest
+      run: docker tag c2955c7aa27f chinmayapte01/myfirstimage:1.0
       
     - name: Docker Push
       run: docker push chinmayapte01/myfirstimage:2.0
