--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -21,10 +21,10 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.txt --tag chinmayapte01/myfirstimage:2.0
+      run: docker build . --file Dockerfile.txt --tag chinmayapte01/docker_repo:2.0
       
-    - name: Docker Tag
-      run: docker tag chinmayapte01/myfirstimage:1.0 chinmayapte01/myfirstimage:initial
+    #- name: Docker Tag
+    #  run: docker tag chinmayapte01/myfirstimage:1.0 chinmayapte01/myfirstimage:initial
       
     - name: Docker Push
-      run: docker push chinmayapte01/myfirstimage:2.0
+      run: docker push chinmayapte01/docker_repo:2.0
